--- a/diamond-api/settings.gradle
+++ b/diamond-api/settings.gradle
@@ -7,5 +7,5 @@
  * in the user manual at https://docs.gradle.org/7.0/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'diamond-homecontrol'
-include ("diamond-api")
+rootProject.name = 'diamond-api'
+include('src')
