--- a/diamond-api/build.gradle
+++ b/diamond-api/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.persistence:javax.persistence-api:2.2'
+    implementation group: 'jakarta.enterprise', name: 'jakarta.enterprise.cdi-api', version: '3.0.0'
+    api group: 'org.reflections', name: 'reflections', version: '0.9.12'
 
     api "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation 'org.mongodb:bson:4.2.3'
