--- a/diamond-server/settings.gradle
+++ b/diamond-server/settings.gradle
@@ -7,5 +7,5 @@
  * in the user manual at https://docs.gradle.org/7.0/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'diamond-homecontrol'
-include ("diamond-api", "diamond-server")
+rootProject.name = 'diamond-server'
+include('src')
