--- a/diamond-api/build.gradle
+++ b/diamond-api/build.gradle
@@ -18,12 +18,8 @@ repositories {
 
 dependencies {
 
-    implementation 'javax.inject:javax.inject:1'
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    implementation 'javax.persistence:javax.persistence-api:2.2'
-    implementation group: 'jakarta.enterprise', name: 'jakarta.enterprise.cdi-api', version: '3.0.0'
     api group: 'org.reflections', name: 'reflections', version: '0.9.12'
-
+    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.7'
     api "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation 'org.mongodb:bson:4.2.3'
     // Use JUnit test framework.
