--- a/diamond-server/build.gradle
+++ b/diamond-server/build.gradle
@@ -9,6 +9,8 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'org.springframework.boot' version '2.5.0'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
 repositories {
@@ -18,8 +20,8 @@ repositories {
 
 dependencies {
     implementation project(":diamond-api")
-    implementation 'org.jboss.weld.se:weld-se-core:4.0.1.SP1'
-    implementation "org.slf4j:slf4j-log4j12:${slf4jVersion}"
+    implementation 'org.springframework.boot:spring-boot-starter'
+
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.1'
 
