--- a/diamond-api/build.gradle
+++ b/diamond-api/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 
     api group: 'org.reflections', name: 'reflections', version: '0.9.12'
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.7'
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+
     api "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation 'org.mongodb:bson:4.2.3'
     // Use JUnit test framework.
