Addedj ob scheduler

--- a/diamond-server/build.gradle
+++ b/diamond-server/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation project(":diamond-api")
     implementation 'org.springframework.boot:spring-boot-starter'
 
+    implementation 'org.quartz-scheduler:quartz:2.3.2'
+
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.1'
 
