--- a/diamond-components/build.gradle
+++ b/diamond-components/build.gradle
@@ -3,7 +3,7 @@
  *
  * This generated file contains a sample Java library project to get you started.
  * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
- * User Manual available at https://docs.gradle.org/7.0/userguide/building_java_projects.html
+ * User Manual available at https://docs.gradle.org/6.8.3/userguide/building_java_projects.html
  */
 
 plugins {
@@ -12,20 +12,16 @@ plugins {
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
+    // Use JCenter for resolving dependencies.
     mavenCentral()
 }
 
 dependencies {
 
-    api group: 'org.reflections', name: 'reflections', version: '0.9.12'
+    implementation project(":diamond-api")
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.7'
-    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
-    api "com.fasterxml.jackson.core:jackson-databind:2.12.3"
-
-    api "org.slf4j:slf4j-api:${slf4jVersion}"
-    implementation 'org.mongodb:bson:4.2.3'
     // Use JUnit test framework.
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13'
+
 
 }
