--- a/diamond-server/build.gradle
+++ b/diamond-server/build.gradle
@@ -20,9 +20,24 @@ repositories {
 
 dependencies {
     implementation project(":diamond-api")
+    implementation project(":diamond-components")
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'commons-io:commons-io:2.9.0'
+    implementation ('org.springframework.boot:spring-boot-starter-web') {
+        exclude module: 'spring-boot-starter-tomcat'
+    }
+    implementation 'org.springframework.boot:spring-boot-starter-undertow'
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.12.3'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.3'
+    implementation 'org.openjdk.nashorn:nashorn-core:15.2'
 
-    implementation 'org.quartz-scheduler:quartz:2.3.2'
+
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+
+
 
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.1'
