--- a/diamond-api/build.gradle
+++ b/diamond-api/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.7'
     implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
     api "com.fasterxml.jackson.core:jackson-databind:2.12.3"
-
+    implementation 'org.greenrobot:eventbus:3.2.0'
     api "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation 'org.mongodb:bson:4.2.3'
     // Use JUnit test framework.
