--- a/diamond-server/build.gradle
+++ b/diamond-server/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'org.openjdk.nashorn:nashorn-core:15.2'
     implementation 'org.mongodb:mongodb-driver-sync:3.12.8'
     implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.8'
-
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
 
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
