--- a/diamond-server/src/main/resources/application.properties
+++ b/diamond-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.banner.location=banner.txt
 spring.quartz.job-store-type=memory
 mongodb.url=mongodb://localhost:27017/diamond_db
+diamond.mqtt.server.enabled=true
+diamond.mqtt.server.url=tcp://anaconda.net-freaks.com:1883
