--- a/diamond-server/src/main/resources/application.properties
+++ b/diamond-server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.banner.location=banner.txt
-spring.quartz.job-store-type=memory
 mongodb.url=mongodb://localhost:27017/diamond_db
 diamond.mqtt.server.enabled=true
 diamond.mqtt.server.url=tcp://anaconda.net-freaks.com:1883
+diamond.test=ok
+diamond.homeLatitude=43.749710
+diamond.homeLongitude=11.325410
