--- a/diamond-api/build.gradle
+++ b/diamond-api/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 
     api group: 'org.reflections', name: 'reflections', version: '0.9.12'
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.7'
+    implementation group: 'org.springframework.boot', name: 'spring-boot', version: '2.5.0'
     implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
     api "com.fasterxml.jackson.core:jackson-databind:2.12.3"
     implementation 'org.greenrobot:eventbus:3.2.0'
