--- a/diamond-scripts/build.gradle
+++ b/diamond-scripts/build.gradle
@@ -18,6 +18,7 @@ repositories {
 
 dependencies {
     implementation project(":diamond-api")
+    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.7'
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13'
 
