--- a/diamond-server/build.gradle
+++ b/diamond-server/build.gradle
@@ -28,7 +28,7 @@ dependencies {
         exclude module: 'spring-boot-starter-tomcat'
     }
     implementation 'org.springframework.boot:spring-boot-starter-undertow'
-    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+//    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.12.3'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.3'
@@ -36,9 +36,10 @@ dependencies {
     implementation 'org.mongodb:mongodb-driver-sync:3.12.8'
     implementation 'org.mongodb:mongo-java-driver:3.12.8'
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.5.9'
 
     implementation 'org.greenrobot:eventbus:3.2.0'
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+//    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 
     // Use JUnit test framework.
